infrastructure/base/service-mesh/kiali/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
  # annotations:
    # cert-manager.io/cluster-issuer: "kommander-ca"
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: kiali.mangale.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20001
  tls:
    - hosts:
        - kiali.mangale.com.np
      secretName: kiali-tls
